// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Puzzle renders ProgressBar, Grid and Control Bar when props.puzzleStatus is IN_PROGRESS 1`] = `
<div
  className="Puzzle"
>
  <ProgressBar />
  <Grid
    cellsByRow={Object {}}
  />
  <Connect(ControlBar) />
</div>
`;

exports[`Puzzle renders Result when props.puzzleStatus is COMPLETED 1`] = `
<div
  className="Puzzle"
>
  <Result />
</div>
`;

exports[`Puzzle renders Spinner component when props.puzzleStatus is LOADING 1`] = `
<div
  className="Puzzle"
>
  <Spinner />
</div>
`;
